# scons-remote

./: .gitignore  LICENSE  README.md  SConstruct  decode.py  scons_remote.py  setup.cfg
data/: coded-message.txt
examples/: SConstruct  scons_remote.py
scons_remote/: ActionRemote.py  EnvironmentRemote.py  __init__.py  action_remote.py  environment_remote.py  utils.py
scratch/: decoded-message.txt
