[metadata]
name = scons_remote
version = attr: scons_remote.VERSION
description = Extending SCons to build targets in remote environments.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires = 
    boto3
    fabric
    scons
python_requires = >= 3.6
setup_requires = setuptools

[options.packages.find]
exclude = 
    examples*