[metadata]
name = scons_remote
author = Daniel Molitor
author_email = connect@ripl.org
url = https://github.com/ripl-org/scons-remote
version = attr: scons_remote.VERSION
description = Extends SCons to build targets in remote environments.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: Free for non-commercial use
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
install_requires = 
    boto3
    fabric
    scons
python_requires = >= 3.6
setup_requires = setuptools

[options.packages.find]
exclude = 
    examples*